# CMakeDynamicLib

./: CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt  TryLib.cpp
